update Linux_note tree命令 & javac 命令行编译加载指定目录中的Jar包